[gd_scene load_steps=17 format=2]

[ext_resource path="res://Objects/Enemies/Goomba/Goomba.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaDie/goomb_die1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaDie/goomb_die2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaDie/goomb_die3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaDie/goomb_die4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba5.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Goomba/GoombaWalk/goomba8.png" type="Texture" id=13]
[ext_resource path="res://Objects/Particles/DestParticles/DestParticles.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "turn",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 12 )

[node name="Goomba" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DestParticles" parent="." instance=ExtResource( 14 )]
position = Vector2( 0, 16 )
lifetime = 0.5
explosiveness = 0.18
fract_delta = false

[node name="TimerParticle" type="Timer" parent="."]
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true
[connection signal="cappy_kill" from="." to="." method="_on_Goomba_cappy_kill"]
[connection signal="kill" from="." to="." method="_on_Goomba_kill"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerParticle" to="." method="_on_TimerParticle_timeout"]
